5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1758_1576.log
== TEST (2019-05-23 10:51:27) 
-- CODE:
# Modulo do vetor
from numpy import
# Entradas
v1 = array(ecal(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif: (v1 > v2)
		print ("EUSAPIA")
-- ERROR:
File "XXXX", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:37) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(ecal(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif: (v1 > v2)
		print ("EUSAPIA")
-- ERROR:
File "XXXX", line 16
    elif: (v1 > v2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:51:57) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(ecal(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:07) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:48) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:52) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
	elif (v2 > v1):
		print ("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:03) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i < size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
	elif (v2 > v1):
		print ("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:15) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i <= size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		print ("EMPATE")
	elif (v1 > v2):
		print ("EUSAPIA")
	elif (v2 > v1):
		print ("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:59) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i <= size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		msg = ("EMPATE")
	elif (v1 > v2):
		msg = ("EUSAPIA")
	elif (v2 > v1):
		msg = ("BARSANULFO")
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:05) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
v1 = 0
v2 = 0
# Laço
while (i <= size(v1)):
	i = i + 1
	v1 = array(eval(input("Jogadas Eusapia: ")))
	v2 = array(eval(input("Jogadas Barsanulfo: ")))
	print(i)
	if (v1 == v2):
		msg = ("EMPATE")
	elif (v1 > v2):
		msg = ("EUSAPIA")
	elif (v2 > v1):
		msg = ("BARSANULFO")
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:10:48) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i <= size(v1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22):
		s1 = s1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:10:58) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(v1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22):
		s1 = s1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:10) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22):
		s1 = s1 + 1
	elif (j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:24) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
File "XXXX", line 14
    elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33):
                                                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:35) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:38) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:38) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:40) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:56) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:00) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
		
if s1 > s2:
	print ("EUSAPIA")
elif s2 > s1:
	print ("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:05) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
		
if s1 > s2:
	print ("EUSAPIA")
elif s2 > s1:
	print ("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:10) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else:
		print ("EMPATE")
		
if s1 > s2:
	print ("EUSAPIA")
elif s2 > s1:
	print ("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:38) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	
if s1 > s2:
	print ("EUSAPIA")
elif s2 > s1:
	print ("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:55) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	
if s1 > s2:
	print ("EUSAPIA")
elif s2 > s1:
	print ("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:32) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
		
if s1 > s2:
	msg = ("EUSAPIA")
elif s2 > s1:
	msg = ("BARSANULFO")
else:
	msg = ("EMPATE")
	
print (msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:22:49) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:24) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	print(i)
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:44) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print (i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:00) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print (i)
	print(msg)
-- EXECUTION TIME:
1.56297
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:11) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- EXECUTION TIME:
1.38362
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:29) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:43) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:48) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:24) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:29:21) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- EXECUTION TIME:
1.54241
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:49) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:29:54) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:30:02) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:30:02) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	else: 
		msg = "EMPATE"
		
if s1 > s2:
	msg = ("EUSAPIA")
elif s2 > s1:
	msg = ("BARSANULFO")
else:
	msg = ("EMPATE")
	
print (msg)
-- EXECUTION TIME:
510.239
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:30:10) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:30:27) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- EXECUTION TIME:
0.38712
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:30:32) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:03) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:31:05) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
print(msg)
-- EXECUTION TIME:
0.469576
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:31:07) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(i)
print(msg)
-- EXECUTION TIME:
0.500828
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:31:30) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
print(i)
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	
print(msg)
-- EXECUTION TIME:
0.523235
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
0
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
0
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
0
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:33) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
print(i)
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:31:38) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
print(i)
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:32:16) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	
print(i)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:32:29) 
-- CODE:
# Modulo do vetor
from numpy import *
# Entradas
j1 = array(eval(input("Jogadas Eusapia: ")))
j2 = array(eval(input("Jogadas Barsanulfo: ")))
# Variavel
i = 0
s1 = 0
s2 = 0
# Laço
while (i < size(j1)):
	if ((j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[i] == 22)):
		s1 = s1 + 1
	elif ((j1[i] == 33 and j2[i] == 11) or (j1[i] == 11 and j2[i] == 22) or (j1[i] == 22 and j2[i] == 33)):
		s2 = s2 + 1
	i = i + 1
	
if s1 > s2:
	msg = "EUSAPIA"
elif s2 > s1:
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
	
print(i)
print(msg)

-- EXECUTION TIME:
0.484306
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
